; ModuleID = '/home/carl/AnghaBench/git/extr_revision.c_for_each_bisect_ref.c'
source_filename = "/home/carl/AnghaBench/git/extr_revision.c_for_each_bisect_ref.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i32 }
%struct.ref_store = type { i32 }

@STRBUF_INIT = common dso_local global %struct.strbuf zeroinitializer, align 4
@.str = private unnamed_addr constant [15 x i8] c"refs/bisect/%s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ref_store*, i32, i8*, i8*)* @for_each_bisect_ref to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @for_each_bisect_ref(%struct.ref_store* %0, i32 %1, i8* %2, i8* %3) #0 {
  %5 = alloca %struct.ref_store*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca %struct.strbuf, align 4
  %10 = alloca i32, align 4
  store %struct.ref_store* %0, %struct.ref_store** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i8* %3, i8** %8, align 8
  %11 = bitcast %struct.strbuf* %9 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %11, i8* align 4 bitcast (%struct.strbuf* @STRBUF_INIT to i8*), i64 4, i1 false)
  %12 = load i8*, i8** %8, align 8
  %13 = call i32 @strbuf_addf(%struct.strbuf* %9, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i8* %12)
  %14 = load %struct.ref_store*, %struct.ref_store** %5, align 8
  %15 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %9, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load i32, i32* %6, align 4
  %18 = load i8*, i8** %7, align 8
  %19 = call i32 @refs_for_each_fullref_in(%struct.ref_store* %14, i32 %16, i32 %17, i8* %18, i32 0)
  store i32 %19, i32* %10, align 4
  %20 = call i32 @strbuf_release(%struct.strbuf* %9)
  %21 = load i32, i32* %10, align 4
  ret i32 %21
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @strbuf_addf(%struct.strbuf*, i8*, i8*) #2

declare dso_local i32 @refs_for_each_fullref_in(%struct.ref_store*, i32, i32, i8*, i32) #2

declare dso_local i32 @strbuf_release(%struct.strbuf*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
